2013-04-05  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #46180: Overrule language labels from TS
	* Fixed bug #41521: pages-TCA not fully loaded in SOLR_RELATION
	* Fixed bug #46966: Autocomplete not working under TYPO3 6.1

2013-02-16  Kai Vogel <kai.vogel@speedprogs.de>

	* Fixed issue #45440: Broken facet options when with queryGroup and "}" in query

2013-02-16  Lienhart Woitok <lienhart.woitok@netlogix.de>

	* Fixed issue #45202: Workspace version swap does not take additionalWhereClause into account
	* Fixed issue #45203: Remove empty tx_solr[q] parameter from URLs
	* Fixed issue #45208: Ensure additionalWhereClause is respected when indexing
	* Fixed issue #45209: SOLR_RELATION does not apply enableFields for MM relations

2013-02-04  Marc Bastian Heinrichs <typo3@mbh-software.de>

	* Fixed bug #44984: For global vars the $GLOBALS array needs to be used since 6.0

2013-02-04  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #44166: Updating tt_content record does not re-index page
	* Fixed bug #40559: Exception on saving records in list module on root page

2013-01-15  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #44276: Endtime filter not matching generated date for unix time 0, leading to empty results

2012-12-26  Ingo Renner  <ingo@typo3.org>

	* Changed install script to install Apache Solr 3.6.2

2012-12-19  Ingo Renner  <ingo@typo3.org>

	* Release of version 2.8.2

	* Fixed remaining bugs in the date range facet renderer 

2012-12-17  Ingo Renner  <ingo@typo3.org>

	* Release of version 2.8.1

	* Fixed bug #44050: Wrong Apache Solr version loaded in multi install script, credits Hauke Meyer
	* Fixed bug #44005: Fatal error when saving records with start-/stoptime, credits Jonas Götze
	* Fixed broken date range facet renderer, credits Stefan Sprenger

2012-12-13  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #43394: Fatal error in results per page switch
	* Fixed bug #43721: LINK-Viewhelper fails to resolve typoscript-path as link target